--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "version": "0.3.0",
   "repository": {
     "type": "git",
-    "url": "git@github.com:bevacqua/node-pemcrypt.git"
+    "url": "git@github.com:vitalije/node-pemcrypt.git"
   },
   "engines": {
     "node": ">=0.8"
@@ -17,7 +17,7 @@
   "main": "pemcrypt.js",
   "dependencies": {
     "lodash": "1.3.1",
-    "ursa": "0.8.0",
+    "ursa": "^0.8.0",
     "mkdirp": "0.3.5"
   }
 }
